add optional dragonchainId to GetDragonchainCredentials update comments

--- a/dragonchain-sdk.tests/config.ini
+++ b/dragonchain-sdk.tests/config.ini
@@ -1,3 +1,7 @@
 ﻿dragonchainId=configTestId
 AUTH_KEY=configAuthKey
 AUTH_KEY_ID=configAuthKeyId
+
+[fakeDragonchainId]
+AUTH_KEY=fakeDragonchainIdConfigAuthKey
+AUTH_KEY_ID=fakeDragonchainIdConfigAuthKeyId
